change background color, timeline content
Former-commit-id: 77ce5576cbffde107efa2d94ec8f4051c0475fd5

--- a/timeline.html
+++ b/timeline.html
@@ -117,7 +117,7 @@ This is a part of the site that is expanded and detailed as the project develops
    <li>Once at its full length, the nuclear shuttle will only need to use 1/5th of the delta V needed to reach and return from lunar orbit to reach the platform of the tether foot and return. It will need that same 1/5th of the normal delta V to go anywhere on the Moon by grappling the platform and hanging off it until it is over its destination, and to return to base the same way.</li>
    <li>Conversion of the asteroid to a space station begins. Early steps in that direction were carried out during tether construction, replacing payloads of asteroid material with simple vessels and beams made of fused regolith. The solar panels and engines of the retrieval ship are installed on the asteroid for use in orbital maintenance.</li>
    <li>The upper tether, extending outwards deeper into space, is also installed and given its own cable car and platform at the tip. This will proceed much faster as the dynamics of the system and good designs are now known.</li>
-   <li>With this process completed, it takes about 2 km/s less delta V to get something to the Moon from Earth, or vice versa.</li>
+   <li>With this process completed, it takes about 2 km/s less delta V to get something to the Moon from Earth, and 3 km/s less to get something back.</li>
    <li>The mining of ice from the poles now is used to fuel the cargo ship on the Earth/Moon run completely.</li>
   </ul>
 <p>A second asteroid retrieval mission is sent out from Earth to get the anchor mass for the equatorial tether complex. Target mass: 15 kilotons.</p>
@@ -131,22 +131,29 @@ This is a part of the site that is expanded and detailed as the project develops
    <li>Once the hab has been pressurized and all the systems successfully tested, the first permanent crew arrives - 30 people. They all have an initial commitment of 2 years after which they may be rotated out for someone else, but the staff will remain 30 people and ramp up as further installations come online.</li>
    <li>This crew concentrates on the development of industrial and farming capacity. They are able to accomplish a great deal quickly, because the teleoperation of the robotic equipment continues to be done from Earth, which they augment now with onsite remote operation of such equipment. Being onsite to handle problems, modify and upgrade equipment, and invent new processes, they are able to make the robotic equipment extremely productive. The robots become able to execute complex processes almost independently, and begin to produce many of the components needed to make more robots.</li>
    <li>Once they complete the first greenhouse, stabilize ice harvesting at a suitable level,   complete the first solar thermal power plant, add a second, much larger hab, and meet a set of test goals demonstrating that it is safe to expand the population, the Residence Program begins</li>
+   <li>Due to the great significance of this hab being that it is the first permanent hab, it is simply being called First Hab.</li>
   </ul>
  </article>
  <article class="column">
   <h5>The Residence Program Begins</h5>
   <p>This is actually the final step of this phase, happening after everything in the other columns is done. However, preparation has been happening for years.</p>
   <ul>
-   <li>The 2nd Peary hab houses the first 200 astronauts of the program. Each was selected by their countries to go to the Moon permanently - to live out the rest of their lives there. For this privilege, these nations pay $150 million per astronaut. All astronauts must meet stiff criteria agreed upon by all the nations.
+   <li>The 2nd Peary hab (connected to First Hab) houses the first 200 astronauts of the program. Each is a married couple selected by their countries to go to the Moon permanently - to live out the rest of their lives there. For this privilege, these nations pay $150 million per astronaut. All astronauts must meet stiff criteria agreed upon by all the nations.
    <ul>
-    <li>They must be scientists and engineers who can play an active role in studying and developing the Moon </li>
-    <li>They must participate regularly in programming broadcast back to Earth, both by appearing on camera, and by coming up with content for such programming. There are many options - arts, sports, educational content, conversational content, games.</li>
+    <li>They must be a married couple with no children under the age of 18, married at least 10 years, and at least 40 years of age. </li>
+    <li>They must be scientists and engineers who can play an active role in studying and developing the Moon. Minimum qualification is that both have at least a bachelor's degree in the sciences or engineering, an one has a more advanced degree or a professional career in a relevant area.</li>
+    <li>They must participate regularly in programming broadcast back to Earth, both by appearing on camera, and by coming up with content for such programming. There are many options - arts, sports, educational content, conversational content, games. Ability in an art or a sport will be part of the criteria by which they are selected.</li>
+    <li>
     <li>They must donate their bodies to science upon death.</li>
+    <li>As it is so important, might as well just say that they all must have had a vasectomy or a tubal ligation</li>
     </ul>
     </li>
-   <li>Nations may send a number of representatives, but at the same time, there is a deliberate effort to send a group that truly represents all the races, religions, language groups, and ways of life of humanity.</li>
+   <li>Nations may send a number of representatives, but at the same time, there is a deliberate effort to send a group that truly represents all the races, religions, language groups, regions, and ways of life of humanity.</li>
+   <li>The crew of First Hab come from the main space-faring nations who built it. As the Residence Program is the main initial revenue stream, it is made of people from other nations. There is overlap due to, for instance, the many nations of the European Union wishing to have nationals in the settlement, as only a few would have nationals in the First Hab. Other space-faring nations may also forego recuperation of their investment in order to have more citizens on the Moon. Still, the bulk of the people in RP round 1 come from places other than the European Union, the U.S.A., Russia, China, India, Japan, and Canada.</li>
+   <li>Payment for each spot may be made over 5 years. Today, there are 63 countries in the world with annual national budgets over US$30 billion. Examples of countries at that US$30 billion level include Slovakia, Vietnam, Bangladesh, Morocco, and Luxembourg. By the time the program began there would be a number of others.</li>
+   <li>Most of the astronauts would probably be in their mid-40s. They would probably be able to actively participate in colony life for at least 30 years. So, those countries in the list in the point above, for an annual investment of 0.1% of the national budget, would get 2 national superstars on the Moon, that can do way more to inspire national pride and collective interest in science and progress than anything they could do at home, for 30 or 40 years.</li>
   </ul>
-   <p>There will be several further rounds of this program. The second one goes partly to Peary, and partly to Lalande. The cost of a space in each round costs progressively less, and there are progressively more spaces available. By the time the program ends, the cost of going has fallen enough to be in reach of a member of the general public, and the population of the Moon has increased enough to provide a stable society capable of receiving and integrating them. </p>
+   <p>There will be several further rounds of this program. The second one goes partly to Peary, and partly to Lalande. The cost of a space in each round costs half the previous round, and has double the spaces. By the time the program ends, the cost of going has fallen enough to be in reach of a member of the general public, and the population of the Moon has increased enough to provide a stable society capable of receiving and integrating them. </p>
   <p>Cost for a residential spot when the Moon opens to the public: $250,000. Population when the opening occurs: 15,000 </p>
  </article>
 </div>
