--- a/learn.html
+++ b/learn.html
@@ -119,7 +119,9 @@ of the Moon."
 				We can already start to put the things we have learned together. Take a look at the figure below. Imagine you are
 				orbiting in the blue orbit, and want to change to the red orbit:
 			</p>
+   <div class="pix">
 			<img src="img/transfer.png">
+   </div>
 			<p>
 				What do you do? Well, take a look at the point where the orbits touch each other. Why are we in the blue orbit there,
 				and not in the red one? After all, you can be in that location if you where in the red orbit too. Not everything is
