img layout for learn.html
Former-commit-id: 491691ec39874cde62c4718f7a542d42e41d82d5

--- a/learn.html
+++ b/learn.html
@@ -119,11 +119,9 @@ of the Moon."
 				We can already start to put the things we have learned together. Take a look at the figure below. Imagine you are
 				orbiting in the blue orbit, and want to change to the red orbit:
 			</p>
-  <div class="pixWrap">
-   <div class="pix" style="width: 300px;">
-			<img src="img/transfer.png">
-   </div>
-  </div>
+	  <div class="pixWrap"><div class="pixCenter">
+					<img src="img/transfer.png" style="width: 600px;">
+	  </div></div>
 			<p>
 				What do you do? Well, take a look at the point where the orbits touch each other. Why are we in the blue orbit there,
 				and not in the red one? After all, you can be in that location if you where in the red orbit too. Not everything is
@@ -164,7 +162,9 @@ of the Moon."
 				How can we achieve that? The answer is naturally to get a velocity higher than the escape velocity. But how exactly does that relate to the final velocity we end up with once we have escaped?
 				Behold. The Pythagoras formula of orbital mechanics:
 			</p>
-			<img class="realsize" src="img/orbitalPythagoras.png" width="415" height="257" alt="v² = v_escape² + v_infinity²">
+   <div class="pixWrap"><div class="pixCenter">
+				<img src="img/orbitalPythagoras.png" alt="v² = v_escape² + v_infinity²">
+   </div></div>
 			<p>
 				Example: Say we are in an orbit again around a mass with a $\mu$ of 1. Our distance is also 1. The escape velocity at this distance is then $\sqrt{2}$. Say then that we have an actual velocity larger than that, for instance $v=2$. In that case, we are going to escape. However, we are still going to be slowed down by gravity, so our final velocity when we have travelled far away is going to be lower than 2 for sure.
 					$$v^2 = v_{\infty}^2 + v_{e}^2$$
