svg solution for transfer image
Former-commit-id: dd88fe313d0ed7623f11b2629b2f4228ba74aa0c [formerly 1ea2ecf54b8cfba7647f566444c9ffeff24e55b2]
Former-commit-id: 21c0311c5ffee11a488e17e3b0070e84d032c422

--- a/learn.html
+++ b/learn.html
@@ -119,9 +119,7 @@ of the Moon."
 				We can already start to put the things we have learned together. Take a look at the figure below. Imagine you are
 				orbiting in the blue orbit, and want to change to the red orbit:
 			</p>
-	  <div class="pixWrap"><div class="pixCenter">
-					<img src="img/transfer.png" style="width: 600px;">
-	  </div></div>
+			<img src="img/transfer.svg" width="50%" alt="circular blue orbit, elliptical red orbit touching the blue one">
 			<p>
 				What do you do? Well, take a look at the point where the orbits touch each other. Why are we in the blue orbit there,
 				and not in the red one? After all, you can be in that location if you where in the red orbit too. Not everything is
