timeline content and new rss entry
Former-commit-id: d3e1df3938fdc0e36850aac354f6b4d40ac0d530 [formerly ca3587311f437045f0a4b0252f8c58cdfebfbbbe]
Former-commit-id: 84d9857fd601a3ad6f506243dc439c98d0551dea

--- a/timeline.html
+++ b/timeline.html
@@ -153,7 +153,54 @@ This is a part of the site that is expanded and detailed as the project develops
    <li>Payment for each spot may be made over 5 years. Today, there are 63 countries in the world with annual national budgets over US$30 billion. Examples of countries at that US$30 billion level include Slovakia, Vietnam, Bangladesh, Morocco, and Luxembourg. By the time the program began there would be a number of others.</li>
    <li>Most of the astronauts would probably be in their mid-40s. They would probably be able to actively participate in colony life for at least 30 years. So, those countries in the list in the point above, for an annual investment of 0.1% of the national budget, would get 2 national superstars on the Moon, that can do way more to inspire national pride and collective interest in science and progress than anything they could do at home, for 30 or 40 years.</li>
   </ul>
-   <p>There will be several further rounds of this program. The second one goes partly to Peary, and partly to Lalande. The cost of a space in each round costs half the previous round, and has double the spaces. By the time the program ends, the cost of going has fallen enough to be in reach of a member of the general public, and the population of the Moon has increased enough to provide a stable society capable of receiving and integrating them. </p>
-  <p>Cost for a residential spot when the Moon opens to the public: $250,000. Population when the opening occurs: 15,000 </p>
+   <p>There will be 7 rounds to this program. The second one goes partly to Peary, and partly to Lalande. The table shows the main aspects of each round.</p>
+  <table>
+  <tr>
+  <th>Round</th><th>Spaces</th><th>Price</th><th>Total Revenue</th>
+  </tr>
+  <tr>
+  <td>1</td><td>200</td><td>$150 million US</td><td>$30 billion US</td>
+  </tr>
+  <tr>
+  <td colspan="4">only couples married >10 yr, over 40, no kids under 18, min. B.Sc. or B.Eng but higher preferred, one of couple post-doc or experienced pro, arts or sports ability. Note: Qualifications for all rounds are announced at the beginning of the program, leaving plenty of time to upgrade qualifications in preparation for later rounds.</td>
+  </tr>
+  <tr>
+  <td>2</td><td>400</td><td>$75 million US</td><td>$30 billion US</td>
+  </tr>
+  <tr>
+  <td colspan="4">Same conditions hold as previous round, greater focus on establishing a truly representative population</td>
+  </tr>
+  <tr>
+  <td>3</td><td>800</td><td>$40 million US</td><td>$32 billion US</td>
+  </tr>
+  <tr>
+  <td colspan="4">Same conditions as previous rounds, advanced degrees in the humanities now an alternative possible qualification for one member of each couple, other still must be a post-doc or expert pro in the sciences or engineering. </td>
+  </tr>
+  <tr>
+  <td>4</td><td>1600</td><td>$20 million US</td><td>$32 billion US</td>
+  </tr>
+  <tr>
+  <td colspan="4">Some single people now accepted, other conditions remain the same. Birth control policies remain the same. </td>
+  </tr>
+  <tr>
+  <td>5</td><td>3200</td><td>$10 million US</td><td>$32 billion US</td>
+  </tr>
+  <tr>
+  <td colspan="4">Greater proportion of singles accepted.</td>
+  </tr>
+  <tr>
+  <td>6</td><td>6400</td><td>$5 million US</td><td>$32 billion US</td>
+  </tr>
+  <tr>
+  <td colspan="4">Fully mixed population, married or single, but all over 40 with no children under 18. Qualification still based on education - seeking a majority of people with strong science and engineering backgrounds, but a significant minority with superlative humanities backgrounds. </td>
+  </tr>
+  <tr>
+  <td>7</td><td>12800</td><td>$5 million US</td><td>$64 billion US</td>
+  </tr>
+  <tr>
+  <td colspan="4">The Earth orbit tether complex is operational. The requirement of sterility is waived for a portion of those chosen, and those colonists may be younger. Colonists who become pregnant must return to Earth for the pregnancy and the first years of the child's life. They may then return to the Moon. The child will be carefully monitored and the family will return to Earth if a threat to the child's health is detected. The existence of the Earth orbital tether lowers the cost of transport enough for this to be viable. Research into pregnancy and development of young in higher mammals will have been conducted by this time, informing safety and procedure on the matter. It is assumed that early pregnancy is not affected by lunar conditions, or that fertile colonists can take appropriate steps to ensure safety in an early phase of pregnancy before they return to Earth.</td>
+  </tr>
+ </table>
+<p>Price for a residential spot when the Moon opens to the public: $250,000. Population when the opening occurs: 25,400 souls.</p>
  </article>
 </div>
