--- a/learn.html
+++ b/learn.html
@@ -174,7 +174,7 @@ of the Moon."
 		</div>
 	</div>
 	<div class="outerDiv">
-{%include spaceJStable.html%}
+{%include spaceJStableGenerated.html%}
 		<div class="innerDiv">
 			<a href="http://www.gnu.org/licenses/">
 				<p>All calculator scripts are released under the GPL version 3</p>
