converting that json file
Former-commit-id: 4f4cd9926b7846f3c369fe6b0726d81947234172 [formerly ae78e815a7d855ab85b4cf506318185b79f398c2]
Former-commit-id: c30289c9c553d3bd3c8a5ed1994a5ab686bb745c

--- a/tools/engineSearch.html
+++ b/tools/engineSearch.html
@@ -3,23 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<title>Engine Search</title>
+	<script src="engines.js"></script>
 	<script>
-function loadJSON(callback){   
-	var xobj = new XMLHttpRequest();
-	xobj.overrideMimeType("application/json");
-	xobj.open('GET','../json/engines.json',true);
-	xobj.onreadystatechange = function () {
-		if(xobj.readyState == 4 && xobj.status == "200"){
-			callback(xobj.responseText);
-		}
-	};
-	xobj.send(null);  
-};
-function init(){
-	loadJSON(function(response){
-		engines = JSON.parse(response).engines;
-	});
-};init();
 var change = function(target,value){
 	document.getElementById(target).value = value;
 };
