engineSearch is working
Former-commit-id: 88a00bfcd2d055551989eba0b632c111f3941260 [formerly a68fdf520bb13280cefe0c3e20dd8abba06e6e05]
Former-commit-id: 868c20c49e1d967357ea3a41ca1e0504b73e999b

--- a/tools/engineSearch.html
+++ b/tools/engineSearch.html
@@ -5,6 +5,7 @@
 	<title>Engine Search</title>
 	<script src="engines.js"></script>
 	<script>
+engines = engines.engines;
 var change = function(target,value){
 	document.getElementById(target).value = value;
 };
