--- a/tools/engineSearch.html
+++ b/tools/engineSearch.html
@@ -11,12 +11,18 @@ var change = function(target,value){
 };
 var update = function(){
 	var maxMass = Number(document.getElementById("mass").value);
-	var minThrust = Number(document.getElementById("thrust").value);
+	var minThrust = Number(document.getElementById("thrust").value)*1000;//kilo newtons
 	var minVelocity = Number(document.getElementById("velocity").value);
 	var out = "<tr><th>Name</th><th>Mass</th><th>Isp</th><th>Thrust V</th><th>Thrust SL</th><th>Fuel</th><th>Oxidizer</th><th>Length</th><th>Country</th></tr>";
+	var foundFlag = false;
 	for(var i=0;i<engines.length;i++){
-		if(engines[i].mass < maxMass && engines[i].thrustVacuum > minThrust && engines[i].isp > minVelocity){
-			out += "<tr><td>"+engines[i].name+"</td><td>"+engines[i].mass+"</td><td>"+engines[i].thrustVacuum+"</td><td>";
+		if(
+			engines[i].mass < maxMass
+			&& engines[i].thrustVacuum > minThrust
+			&& engines[i].isp > minVelocity
+		){
+			foundFlag = true;
+			out += "<tr><td>"+engines[i].name+"</td><td>"+engines[i].isp+"</td><td>"+engines[i].mass+"</td><td>"+engines[i].thrustVacuum+"</td><td>";
 			if(engines[i].thrustGround){out += engines[i].thrustGround};
 			out += "</td><td>";
 			if(engines[i].fuel){out += engines[i].fuel};
@@ -29,6 +35,11 @@ var update = function(){
 			out += "</td></tr>";
 		};
 	};
+	var warnings = "";
+	if(!foundFlag){
+		warnings = "No engines found matching the parameters";
+	};
+	document.getElementById("warnings").innerHTML = warnings;
 	document.getElementById("list").innerHTML = out;
 };
 	</script>
@@ -53,11 +64,39 @@ tr:nth-child(2n+1){
 table{
 	box-shadow:4px 4px 3px #888888;
 }
+body{
+	font-family:Arial,Helvetica,sans-serif;
+	background-color:#202030;
+}
+.wrapper{
+	margin-left:5%;
+	margin-right:5%;
+	padding:20px;
+}
+.container{
+	display:inline-block;
+	-webkit-border-radius:10px;
+	-moz-border-radius:10px;
+	border-radius:10px;
+	border-style:solid;
+	border-width:1px;
+	border-color:black;
+	padding:10px;
+	margin:5px;
+}
+#main{
+	background-color:#F6F6F0;
+	-webkit-border-radius:10px;
+	-moz-border-radius:10px;
+	border-radius:10px;
+	box-shadow:5px 5px 4px #000000;
+}
 	</style>
 </head>
 <body>
+<div class="wrapper" id="main">
 <h1>Engine Search</h1>
-<div>
+<div class="container">
 	<p>Max engine mass:</p>
 	<input type="range" id="massSlider"
 		min="0" max="20000" step="1" value="1000"
@@ -67,7 +106,7 @@ table{
 		oninput="change('massSlider',this.value)">kg
 	<p>Min engine thrust:</p>
 	<input type="range" id="thrustSlider"
-		min="0" max="5000" step="1" value="50"
+		min="0" max="2000" step="1" value="50"
 		oninput="change('thrust',this.value)">
 	<input type="text" id="thrust"
 		value="50"
@@ -80,9 +119,10 @@ table{
 		value="300"
 		oninput="change('velocitySlider',this.value)">s
 	<br>
-	<button onclick="update()">Update</button>
-</div>
+</div><br>
+<button onclick="update()">Update</button>
 <hr>
+<p id="warnings"></p>
 <table>
 	<tbody id="list">
 		<tr>
@@ -98,5 +138,6 @@ table{
 		</tr>
 	</tbody>
 </table>
+</div>
 </body>
 </html>
