--- a/tools/engineSearch.html
+++ b/tools/engineSearch.html
@@ -13,7 +13,7 @@ var update = function(){
 	var maxMass = Number(document.getElementById("mass").value);
 	var minThrust = Number(document.getElementById("thrust").value)*1000;//kilo newtons
 	var minVelocity = Number(document.getElementById("velocity").value);
-	var out = "<tr><th>Name</th><th>Mass (kg)</th><th>Isp (s)</th><th>Thrust V (kN)</th><th>Thrust SL (kN)</th><th>Fuel</th><th>Oxidizer</th><th>Length (m)</th><th>Country</th></tr>";
+	var out = "<tr><th>Name</th><th>Mass (kg)</th><th>Isp (s)</th><th>Thrust(kN)</th><th>Isp SL(s)</th><th>Thrust SL (kN)</th><th>Fuel</th><th>Oxidizer</th><th>Length (m)</th><th>Country</th></tr>";
 	var foundFlag = false;
 	for(var i=0;i<engines.length;i++){
 		if(
@@ -22,7 +22,9 @@ var update = function(){
 			&& engines[i].isp > minVelocity
 		){
 			foundFlag = true;
-			out += "<tr><td><a href='"+engines[i].source+"'>"+engines[i].name+"</a></td><td>"+engines[i].isp+"</td><td>"+engines[i].mass+"</td><td>"+engines[i].thrustVacuum/1000+"</td><td>";
+			out += "<tr><td><a href='"+engines[i].source+"'>"+engines[i].name+"</a></td><td>"+engines[i].mass+"</td><td>"+engines[i].isp+"</td><td>"+engines[i].thrustVacuum/1000+"</td><td>";
+			if(engines[i].ispGround){out += engines[i].ispGround};
+			out += "</td><td>";
 			if(engines[i].thrustGround){out += engines[i].thrustGround/1000};
 			out += "</td><td>";
 			if(engines[i].fuel){out += engines[i].fuel};
@@ -129,7 +131,8 @@ body{
 			<th>Name</th>
 			<th>Mass (kg)</th>
 			<th>Isp (s)</th>
-			<th>Thrust V (kN)</th>
+			<th>Thrust(kN)</th>
+			<th>Isp SL(s)</th>
 			<th>Thrust SL (kN)</th>
 			<th>Fuel</th>
 			<th>Oxidizer</th>
